--- a/client/src/styles/components/_buttons.scss
+++ b/client/src/styles/components/_buttons.scss
@@ -9,6 +9,7 @@
   @include button-behavior;
 
   width: 100%;
+  height: 100%;
 
   text-align: center;
 
@@ -38,9 +39,11 @@
 
   color: color.$light1;
   background-color: color.$light2;
-  text-align: center;
 
-  padding: 5px 10px;
+  width: 100%;
+  height: 100%;
+
+  text-align: center;
 
   border-style: none;
   border-radius: 5px;
